--- a/.gitattributes
+++ b/.gitattributes
@@ -499,6 +499,7 @@ converter/delphiproject2laz.pas svneol=native#text/plain
 converter/delphiunit2laz.lfm svneol=native#text/plain
 converter/delphiunit2laz.lrs svneol=native#text/pascal
 converter/delphiunit2laz.pas svneol=native#text/pascal
+converter/lazxmlforms.pas svneol=native#text/plain
 debian/README.Debian svneol=native#text/plain
 debian/changelog svneol=native#text/plain
 debian/compat svneol=native#text/plain
