help for IDE windows: started editor and mapping
 SVN 9198@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1136,11 +1136,15 @@ ide/helpmanager.pas svneol=native#text/pascal
 ide/helpoptions.lfm svneol=native#text/plain
 ide/helpoptions.lrs svneol=native#text/pascal
 ide/helpoptions.pas svneol=native#text/pascal
+ide/idecontexthelpedit.lfm svneol=native#text/plain
+ide/idecontexthelpedit.lrs svneol=native#text/plain
+ide/idecontexthelpedit.pas svneol=native#text/plain
 ide/idedefs.pas svneol=native#text/pascal
 ide/ideoptiondefs.pas svneol=native#text/pascal
 ide/ideprocs.pp svneol=native#text/pascal
 ide/ideprotocol.pas svneol=native#text/pascal
 ide/idetranslations.pas svneol=native#text/pascal
+ide/idewindowhelp.pas svneol=native#text/plain
 ide/imexportcompileropts.lfm svneol=native#text/plain
 ide/imexportcompileropts.lrs svneol=native#text/pascal
 ide/imexportcompileropts.pas svneol=native#text/pascal
