win64 fixes (from peter, modified)
 SVN 9222@trunk

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -29,7 +29,7 @@ destdir=$(BASEDIR)/dist
 [prerules]
 RCPP?=$(strip $(firstword cpp$(SRCEXEEXT)))
 #
-ifeq ($(OS_TARGET),win32)
+ifneq ($(findstring $(OS_TARGET),win32 win64),)
 LAZARUS_INSTALL_DIR=C:\lazarus
 else
 LAZARUS_INSTALL_DIR=/usr/share/lazarus
