--- a/.gitattributes
+++ b/.gitattributes
@@ -2259,6 +2259,8 @@ lcl/interfaces/wince/wincecallback.inc svneol=native#text/plain
 lcl/interfaces/wince/winceint.pp svneol=native#text/plain
 lcl/interfaces/wince/wincelclintf.inc svneol=native#text/plain
 lcl/interfaces/wince/wincelclintfh.inc svneol=native#text/plain
+lcl/interfaces/wince/wincelistsl.inc svneol=native#text/plain
+lcl/interfaces/wince/wincelistslh.inc svneol=native#text/plain
 lcl/interfaces/wince/winceobject.inc svneol=native#text/plain
 lcl/interfaces/wince/winceproc.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewinapi.inc svneol=native#text/plain
