--- a/.gitattributes
+++ b/.gitattributes
@@ -573,6 +573,11 @@ debugger/windebug/fpwd/fpwdglobal.pas svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdloop.pas svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdpeimage.pas svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdtype.pas svneol=native#text/pascal
+debugger/windebug/test/asmtest.lpi svneol=native#text/plain
+debugger/windebug/test/asmtest.lpr svneol=native#text/pascal
+debugger/windebug/test/asmtestunit.lfm svneol=native#text/plain
+debugger/windebug/test/asmtestunit.lrs svneol=native#text/plain
+debugger/windebug/test/asmtestunit.pas svneol=native#text/pascal
 debugger/windebug/windebugger.pp svneol=native#text/pascal
 debugger/windebug/windextra.pp svneol=native#text/pascal
 debugger/windebug/windisas.pp svneol=native#text/plain
