wince intf: statusbar,listview,prgressbar,toolbar(oldtoolbar),trackbar,scrollingwindow,scrollbox,groupbox,combobox  from roozbeh
 SVN 9249@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2267,12 +2267,15 @@ lcl/interfaces/wince/wincelclintf.inc svneol=native#text/plain
 lcl/interfaces/wince/wincelclintfh.inc svneol=native#text/plain
 lcl/interfaces/wince/wincelistsl.inc svneol=native#text/plain
 lcl/interfaces/wince/wincelistslh.inc svneol=native#text/plain
+lcl/interfaces/wince/wincememostrings.inc svneol=native#text/plain
 lcl/interfaces/wince/winceobject.inc svneol=native#text/plain
 lcl/interfaces/wince/winceproc.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewinapi.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewinapih.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewsbuttons.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewscomctrls.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewscontrols.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewscustomlistview.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewsextctrls.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsforms.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsstdctrls.pp svneol=native#text/plain
