--- a/.gitattributes
+++ b/.gitattributes
@@ -2189,6 +2189,7 @@ lcl/interfaces/qt/qtcallback.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtint.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintf.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintfh.inc svneol=native#text/pascal
+lcl/interfaces/qt/qtmemostr.inc svneol=native#text/plain
 lcl/interfaces/qt/qtobject.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtprivate.pp svneol=native#text/plain
 lcl/interfaces/qt/qtwinapi.inc svneol=native#text/pascal
