moved ideintf/configstorage.pas to lcl/lazconfigstorage.pas
 SVN 9270@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1281,7 +1281,6 @@ ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
 ideintf/componenttreeview.lrs svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
-ideintf/configstorage.pas svneol=native#text/pascal
 ideintf/dbpropedits.pas svneol=native#text/pascal
 ideintf/fieldseditor.lfm svneol=native#text/plain
 ideintf/fieldseditor.lrs svneol=native#text/pascal
@@ -2295,6 +2294,7 @@ lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
+lcl/lazconfigstorage.pas svneol=native#text/pascal
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
 lcl/lclicons.lrs svneol=native#text/pascal
