--- a/.gitattributes
+++ b/.gitattributes
@@ -1301,6 +1301,7 @@ ideintf/helphtml.pas svneol=native#text/pascal
 ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
 ideintf/idedialogs.pas svneol=native#text/plain
+ideintf/idehelpintf.pas svneol=native#text/plain
 ideintf/idemsgintf.pas svneol=native#text/plain
 ideintf/idewindowintf.pas svneol=native#text/plain
 ideintf/imagelisteditor.lfm svneol=native#text/plain
