moved ideintf/helpintf.pas to lcl/lazhelpintf.pas
 SVN 9277@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1299,7 +1299,6 @@ ideintf/graphicpropedit.pas svneol=native#text/plain
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpfpdoc.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
-ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
 ideintf/idedialogs.pas svneol=native#text/plain
 ideintf/idehelpintf.pas svneol=native#text/plain
@@ -2298,6 +2297,7 @@ lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
 lcl/lazconfigstorage.pas svneol=native#text/pascal
+lcl/lazhelpintf.pas svneol=native#text/pascal
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
 lcl/lclicons.lrs svneol=native#text/pascal
