--- a/components/chmhelp/democontrol/project1.lpi
+++ b/components/chmhelp/democontrol/project1.lpi
@@ -4,46 +4,11 @@
     <PathDelim Value="/"/>
     <Version Value="5"/>
     <General>
+      <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
     </General>
-    <LazDoc Paths=""/>
-    <Units Count="4">
-      <Unit0>
-        <Filename Value="project1.lpr"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="project1"/>
-        <UsageCount Value="22"/>
-      </Unit0>
-      <Unit1>
-        <CursorPos X="67" Y="37"/>
-        <EditorIndex Value="0"/>
-        <Filename Value="unit1.pas"/>
-        <ComponentName Value="Form1"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <ResourceFilename Value="unit1.lrs"/>
-        <TopLine Value="13"/>
-        <UnitName Value="Unit1"/>
-        <UsageCount Value="22"/>
-      </Unit1>
-      <Unit2>
-        <CursorPos X="26" Y="66"/>
-        <Filename Value="/home/andrew/lazfpc/projects/help/lhelp/lhelpcontrol.pas"/>
-        <TopLine Value="61"/>
-        <UnitName Value="LHelpControl"/>
-        <UsageCount Value="11"/>
-      </Unit2>
-      <Unit3>
-        <CursorPos X="3" Y="40"/>
-        <Filename Value="/home/andrew/lazfpc/fpc/fcl/inc/process.pp"/>
-        <TopLine Value="24"/>
-        <UnitName Value="process"/>
-        <UsageCount Value="10"/>
-      </Unit3>
-    </Units>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -62,7 +27,20 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <JumpHistory Count="0" HistoryIndex="-1"/>
+    <Units Count="2">
+      <Unit0>
+        <Filename Value="project1.lpr"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="project1"/>
+      </Unit0>
+      <Unit1>
+        <Filename Value="unit1.pas"/>
+        <ComponentName Value="Form1"/>
+        <IsPartOfProject Value="True"/>
+        <ResourceFilename Value="unit1.lrs"/>
+        <UnitName Value="Unit1"/>
+      </Unit1>
+    </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
@@ -84,12 +62,4 @@
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
-  <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Source Value="/home/andrew/lazfpc/lazarus/lcl/interfaces/gtk2/gtk2object.inc"/>
-        <Line Value="857"/>
-      </Item1>
-    </BreakPoints>
-  </Debugging>
 </CONFIG>
