--- a/.gitattributes
+++ b/.gitattributes
@@ -1298,7 +1298,6 @@ ideintf/graphicpropedit.lrs svneol=native#text/plain
 ideintf/graphicpropedit.pas svneol=native#text/plain
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpfpdoc.pas svneol=native#text/pascal
-ideintf/helphtml.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
 ideintf/idedialogs.pas svneol=native#text/plain
 ideintf/idehelpintf.pas svneol=native#text/plain
@@ -2297,6 +2296,7 @@ lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
 lcl/languages/lcl.ua.po svneol=native#text/plain
 lcl/lazconfigstorage.pas svneol=native#text/pascal
+lcl/lazhelphtml.pas svneol=native#text/pascal
 lcl/lazhelpintf.pas svneol=native#text/pascal
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
