--- a/.gitattributes
+++ b/.gitattributes
@@ -2275,13 +2275,17 @@ lcl/interfaces/wince/wincememostrings.inc svneol=native#text/plain
 lcl/interfaces/wince/winceobject.inc svneol=native#text/plain
 lcl/interfaces/wince/winceproc.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewinapi.inc svneol=native#text/plain
+lcl/interfaces/wince/wincewinapiemu.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewinapih.inc svneol=native#text/plain
+lcl/interfaces/wince/wincewsarrow.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsbuttons.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewschecklst.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewscomctrls.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewscontrols.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewscustomlistview.inc svneol=native#text/plain
 lcl/interfaces/wince/wincewsextctrls.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsforms.pp svneol=native#text/plain
+lcl/interfaces/wince/wincewsspin.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsstdctrls.pp svneol=native#text/plain
 lcl/intfgraphics.pas svneol=native#text/pascal
 lcl/languages/lcl.ca.po svneol=native#text/plain
