added example for HTML help
 SVN 9311@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -919,6 +919,14 @@ examples/groupboxnested.pas svneol=native#text/pascal
 examples/hello.lpi svneol=native#text/plain
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
+examples/helphtml/html/edit1.html svneol=native#text/plain
+examples/helphtml/html/edit2.html svneol=native#text/plain
+examples/helphtml/html/index.html svneol=native#text/plain
+examples/helphtml/htmlhelp1.lpi svneol=native#text/plain
+examples/helphtml/htmlhelp1.lpr svneol=native#text/plain
+examples/helphtml/unit1.lfm svneol=native#text/plain
+examples/helphtml/unit1.lrs svneol=native#text/plain
+examples/helphtml/unit1.pas svneol=native#text/plain
 examples/idequickfix/quickfixdemo1.pas svneol=native#text/plain
 examples/idequickfix/quickfixexample.lpk svneol=native#text/plain
 examples/idequickfix/quickfixexample.pas svneol=native#text/plain
@@ -1539,8 +1547,8 @@ images/components/tfontdialog.ico -text svneol=unset#image/x-icon
 images/components/tfontdialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tgroupbox.ico -text svneol=unset#image/x-icon
 images/components/tgroupbox.xpm -text svneol=native#image/x-xpixmap
+images/components/thtmlbrowserhelpviewer.xpm svneol=native#text/plain
 images/components/thtmlhelpdatabase.xpm svneol=native#text/plain
-images/components/thtmlhelpviewer.xpm svneol=native#text/plain
 images/components/tidedialoglayoutstorage.xpm -text svneol=unset#image/xpm
 images/components/tidletimer.xpm -text svneol=native#image/x-xpixmap
 images/components/timage.ico -text svneol=unset#image/x-icon
