added TFindDialog, TReplaceDialog  from Aleksey Lagunov
 SVN 9312@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1542,6 +1542,7 @@ images/components/teditbutton.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilelistbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenamedit.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenameedit.xpm -text svneol=native#image/x-xpixmap
+images/components/tfinddialog.xpm svneol=native#text/plain
 images/components/tfloatspinedit.xpm svneol=native#text/plain
 images/components/tfontdialog.ico -text svneol=unset#image/x-icon
 images/components/tfontdialog.xpm -text svneol=native#image/x-xpixmap
@@ -1601,6 +1602,7 @@ images/components/tradiobutton.ico -text svneol=unset#image/x-icon
 images/components/tradiobutton.xpm -text svneol=native#image/x-xpixmap
 images/components/tradiogroup.ico -text svneol=unset#image/x-icon
 images/components/tradiogroup.xpm -text svneol=native#image/x-xpixmap
+images/components/treplacedialog.xpm svneol=native#text/plain
 images/components/tsavedialog.ico -text svneol=unset#image/x-icon
 images/components/tsavedialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tsavepicturedialog.ico -text svneol=unset#image/x-icon
@@ -1855,6 +1857,12 @@ lcl/forms.pp svneol=native#text/pascal
 lcl/forms/calendarpopup.lfm svneol=native#text/plain
 lcl/forms/calendarpopup.lrs svneol=native#text/plain
 lcl/forms/calendarpopup.pas svneol=native#text/plain
+lcl/forms/finddlgunit.lfm svneol=native#text/plain
+lcl/forms/finddlgunit.lrs svneol=native#text/plain
+lcl/forms/finddlgunit.pas svneol=native#text/plain
+lcl/forms/replacedlgunit.lfm svneol=native#text/plain
+lcl/forms/replacedlgunit.lrs svneol=native#text/plain
+lcl/forms/replacedlgunit.pas svneol=native#text/plain
 lcl/fpcadds.pas svneol=native#text/pascal
 lcl/graphics.pp svneol=native#text/pascal
 lcl/graphmath.pp svneol=native#text/pascal
@@ -1951,6 +1959,7 @@ lcl/include/dragobject.inc svneol=native#text/pascal
 lcl/include/edit.inc svneol=native#text/pascal
 lcl/include/filedialog.inc svneol=native#text/pascal
 lcl/include/fileutil.inc svneol=native#text/pascal
+lcl/include/finddialog.inc svneol=native#text/plain
 lcl/include/font.inc svneol=native#text/pascal
 lcl/include/fontdialog.inc svneol=native#text/pascal
 lcl/include/graphic.inc svneol=native#text/pascal
@@ -1996,6 +2005,7 @@ lcl/include/radiobutton.inc svneol=native#text/pascal
 lcl/include/radiogroup.inc svneol=native#text/pascal
 lcl/include/reginifile.inc svneol=native#text/pascal
 lcl/include/region.inc svneol=native#text/pascal
+lcl/include/replacedialog.inc svneol=native#text/plain
 lcl/include/screen.inc svneol=native#text/pascal
 lcl/include/scrollbar.inc svneol=native#text/pascal
 lcl/include/scrollbox.inc svneol=native#text/pascal
