--- a/.gitattributes
+++ b/.gitattributes
@@ -777,6 +777,7 @@ docs/xml/lcl/interfaces/gtk/gtkwsstdctrls.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/interfaces/gtk/gtkwstoolwin.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/interfaces/gtk/interfaces.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/intfgraphics.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lazconfigstorage.xml svneol=native#text/plain
 docs/xml/lcl/lazhelphtml.xml svneol=native#text/plain
 docs/xml/lcl/lazhelpintf.xml svneol=native#text/plain
 docs/xml/lcl/lazlinkedlist.xml svneol=LF#text/xml eol=lf
