--- a/.gitattributes
+++ b/.gitattributes
@@ -1803,6 +1803,7 @@ languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
 languages/lazaruside.ru.po svneol=native#text/plain
 languages/lazaruside.ua.po svneol=native#text/plain
+languages/lazaruside.zh-cn.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
@@ -1818,6 +1819,7 @@ languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ua.po svneol=native#text/plain
+languages/objinspstrconsts.zh-cn.po svneol=native#text/plain
 lcl/LAYOUT.txt svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
