added symlinks in /usr/local/bin
 SVN 9374@trunk

--- a/tools/install/macosx/lazarus.packproj.template
+++ b/tools/install/macosx/lazarus.packproj.template
@@ -347,6 +347,55 @@
 												<key>UID</key>
 												<integer>0</integer>
 											</dict>
+											<dict>
+												<key>Children</key>
+												<array>
+													<dict>
+														<key>Children</key>
+														<array/>
+														<key>GID</key>
+														<integer>0</integer>
+														<key>Path</key>
+														<string>./bin/lazarus</string>
+														<key>Path Type</key>
+														<integer>2</integer>
+														<key>Privileges</key>
+														<integer>493</integer>
+														<key>Type</key>
+														<integer>3</integer>
+														<key>UID</key>
+														<integer>0</integer>
+													</dict>
+													<dict>
+														<key>Children</key>
+														<array/>
+														<key>GID</key>
+														<integer>0</integer>
+														<key>Path</key>
+														<string>./bin/startlazarus</string>
+														<key>Path Type</key>
+														<integer>2</integer>
+														<key>Privileges</key>
+														<integer>493</integer>
+														<key>Type</key>
+														<integer>3</integer>
+														<key>UID</key>
+														<integer>0</integer>
+													</dict>
+												</array>
+												<key>GID</key>
+												<integer>0</integer>
+												<key>Path</key>
+												<string>bin</string>
+												<key>Path Type</key>
+												<integer>0</integer>
+												<key>Privileges</key>
+												<integer>493</integer>
+												<key>Type</key>
+												<integer>1</integer>
+												<key>UID</key>
+												<integer>0</integer>
+											</dict>
 										</array>
 										<key>GID</key>
 										<integer>0</integer>
