improvements for building debs
 SVN 9395@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2464,27 +2464,27 @@ tools/find_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/getallmofiles.sh -text svneol=native#application/x-sh
 tools/getallpofiles.sh -text svneol=native#application/x-sh
 tools/install/build_fpc-src_rpm.sh svneol=native#text/plain
-tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
+tools/install/build_fpc_rpm.sh svneol=native#text/plain
 tools/install/build_fpc_snaphot_rpm.sh svneol=native#text/plain
-tools/install/create_clean_fpcsrc_directory.sh -text svneol=native#application/x-sh
-tools/install/create_clean_lazarus_directory.sh -text svneol=native#application/x-sh
-tools/install/create_fpc_deb.sh -text svneol=native#application/x-sh
-tools/install/create_fpc_export_tgz.sh -text svneol=native#application/x-sh
-tools/install/create_fpc_tgz_from_local_dir.sh -text svneol=native#application/x-sh
-tools/install/create_lazarus_deb.sh -text svneol=native#application/x-sh
-tools/install/create_lazarus_export_tgz.sh -text svneol=native#application/x-sh
-tools/install/create_lazarus_rpm.sh -text svneol=native#application/x-sh
+tools/install/create_clean_fpcsrc_directory.sh svneol=native#text/plain
+tools/install/create_clean_lazarus_directory.sh svneol=native#text/plain
+tools/install/create_fpc_deb.sh svneol=native#text/plain
+tools/install/create_fpc_export_tgz.sh svneol=native#text/plain
+tools/install/create_fpc_tgz_from_local_dir.sh svneol=native#text/plain
+tools/install/create_lazarus_deb.sh svneol=native#text/plain
+tools/install/create_lazarus_export_tgz.sh svneol=native#text/plain
+tools/install/create_lazarus_rpm.sh svneol=native#text/plain
 tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
-tools/install/create_lazarus_tgz_from_local_dir.sh -text svneol=native#application/x-sh
+tools/install/create_lazarus_tgz_from_local_dir.sh svneol=native#text/plain
 tools/install/cross_unix/HowToCreate_fpc_crosswin32_rpm.txt svneol=native#text/plain
 tools/install/cross_unix/build_linux_cross_win32_rpm.sh svneol=native#text/plain
 tools/install/cross_unix/update_cross_fpc.sh svneol=native#text/plain
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
-tools/install/do_nothing.sh -text svneol=native#application/x-sh
-tools/install/download_and_build_fpc_rpm.sh -text svneol=native#application/x-sh
-tools/install/file_filter.sh -text svneol=native#application/x-sh
+tools/install/do_nothing.sh svneol=native#text/plain
+tools/install/download_and_build_fpc_rpm.sh svneol=native#text/plain
+tools/install/file_filter.sh svneol=native#text/plain
 tools/install/fpc-src.spec svneol=native#text/plain
-tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
+tools/install/get_lazarus_version.sh svneol=native#text/plain
 tools/install/macosx/fpc-release.packproj.template svneol=native#text/plain
 tools/install/macosx/fpc.packproj.template svneol=native#text/plain
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
@@ -2500,8 +2500,8 @@ tools/install/rpm/fpc.spec.template svneol=native#text/plain
 tools/install/rpm/fpc_crosswin32.spec.template svneol=native#text/plain
 tools/install/rpm/get_rpm_source_dir.sh svneol=native#text/plain
 tools/install/rpm/lazarus.spec.template svneol=native#text/plain
-tools/install/setup.sh -text svneol=native#application/x-sh
-tools/install/smart_strip.sh -text svneol=native#application/x-sh
+tools/install/setup.sh svneol=native#text/plain
+tools/install/smart_strip.sh svneol=native#text/plain
 tools/install/win32/build-fpc.bat svneol=native#text/x-msdos-program
 tools/install/win32/build-lazarus.bat svneol=native#text/x-msdos-program
 tools/install/win32/create_installer.bat svneol=native#text/x-msdos-program
