--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -51,12 +51,12 @@ cp -a lazarus/* %{buildroot}%{_libdir}/%{name}/
   install -m 644 lazarus/install/lazarus.desktop %{buildroot}%{_datadir}/applications/lazarus.desktop
 ln -sf ../%{_lib}/%{name}/lazarus %{buildroot}%{_bindir}/lazarus
 ln -sf ../%{_lib}/%{name}/startlazarus %{buildroot}%{_bindir}/startlazarus
-%{_lib}/%{name}/tools/install/rpm/create_gtk1_links.sh
 
 %clean
 [ %{buildroot} != "/" ] && ( rm -rf %{buildroot} )
 
-#%post
+%post
+%{_libdir}/%{name}/tools/install/rpm/create_gtk1_links.sh
 #update-desktop-database &> /dev/null ||:
 
 %postun
